crates/cli/tests/snapshots/list_concat_merge__lint_df852263274fb00f23be153f680f46ebe6aa6a316aca78ae704af8e0f0a5fd8e.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ a b ] ++ lib.optionals cfg.enable [ x ] ++ [ d e ]\""
---
[35] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [ a b ] ++ lib.optionals cfg.enable [ x ] ++ [ d e ]
   │ ──────────────────────────┬─────────────────────────  
   │                           ╰─────────────────────────── Multiple list concatenations that can be merged
───╯
